# Task-Devourer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  config.json.example
docs/: ARCHITECTURE.md
src/: main.cpp
src/app/: AppMessages.h
src/config/: Config.cpp  Config.h
src/core/: Task.h  TaskService.cpp  TaskService.h
src/gui/: MainWindow.cpp  MainWindow.h
src/llm/: LlmClient.cpp  LlmClient.h
src/log/: Logger.cpp  Logger.h
src/redis/: DialogLogger.cpp  DialogLogger.h
src/storage/: JsonStorage.cpp  JsonStorage.h
src/timer/: TimerService.cpp  TimerService.h
src/util/: Paths.cpp  Paths.h  StringUtil.cpp  StringUtil.h
